Fix intro paragraph on mobile

--- a/style.scss
+++ b/style.scss
@@ -93,6 +93,12 @@ html {
 }
 
 @media screen and (max-width: 690px) {
+	.title {
+		p {
+			padding-right: 0.5em;
+			padding-left: 0.5em;
+		}
+	}
 	.section {
 		h1 {
 			font-size: 32pt;
